--- a/listas_ordenadas.html
+++ b/listas_ordenadas.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Listas con funcionalidades de arrays.</title>
+    <title>Listas ordenadas.</title>
     <meta charset="utf-8"/>
     <style>
         *{
@@ -22,8 +22,8 @@
 </head>
 
 <body>
-    <h1>Listas con funcionalidades de arrays.</h1>
-    <script src="listas_arrays.js"></script>
+    <h1>Listas ordenadas.</h1>
+    <script src="listas_ordenadas.js"></script>
 </body>
 
 </html>
